# fon-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  analyze_funds.py  config.example.toml  docker-compose.yml  pyproject.toml  test_out.txt  test_result.txt  test_results.txt
src/fon_mcp/: __init__.py  _db.py  _settings.py  _tefas_utils.py  _version_check.py  server.py  warmup.py
src/fon_mcp/tools/: admin.py  analytics.py  kap.py  tefas.py
tests/: conftest.py  test_analytics.py  test_db.py  test_kap_tools.py  test_tefas_tools.py
