[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fon-mcp"
version = "0.1.0"
description = "MCP server for Turkish investment fund data (TEFAS + KAP)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0,<1.27",
    "duckdb>=1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markitdown[docx,pdf]>=0.1",
    "kap-client>=1.1.1",
    "tefas-client>=2.0.2",
    "pytz>=2026.1.post1",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
fon-mcp = "fon_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fon_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line-length enforced by formatter, not linter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
